# squid-game-doll

./: .gitignore  CLAUDE.md  INSTALL.md  INSTALL_IT.md  JETSON_ORIN.md  JETSON_ORIN_IT.md  JETSON_SERVO_WIRING.md  LASER-NATIVE-FLOAT-REWRITE.md  LASER-TODO.md  OPENCV_JETSON.md  OPENCV_JETSON_IT.md  README-it.md  README.md  config-test.yaml  export_tensorrt.py  install.bat  optimize_for_jetson.py  pyproject.toml  requirements.txt  run.sh  run_laser_finder_nn_batch.py  setup.sh  setup_jetson.sh  test_jetson_servo.py  test_laser_finder_nn.py  test_yoloe_laser.py  test_yolov5l6_laser.py
.github/workflows/: ci.yaml  publish.yml
doc/: README.md
drafts/: laser-pict-gen.py
drafts/laser_cross_detection/: __init__.py
esp32/: Servo.py  boot.py  tracker.py
hardware/doll-model/: README.md  braccio-dx.stl  braccio-sx.stl  busto.stl  mano-dx.stl  mano-sx.stl  piede-dx.stl  piede-sx.stl  sg90-holder.stl  vestito-base.stl  vestito.stl
hardware/proto/: Laser Holder v6.3mf  Laser Holder v6.stl  SG90 MG90 Servo Pan and Tilt Camera platform.3mf  laser holder.3mf  laser holder.stl
src/: debug.py  requirements.txt
src/drafts/: laser-tracking.py  test-move-webcam.py  yolo.py
src/squid_game_doll/: BasePlayerTracker.py  Calibrator.py  ConfigPhase.py  FaceExtractor.py  GameCamera.py  GameScreen.py  GameSettings.py  LaserShooter.py  LaserTracker.py  Player.py  PlayerTrackerHailo.py  PlayerTrackerUL.py  SquidGame.py  __init__.py  (+20 more)
tests/: example.py  laser-opencv.py  laser-pict-gen.py  test.py  test3.py  test_game.py  test_laser_finder_nn.py  test_laser_system_loading.py  webcam.py
(+88 files in other folders)
