[project]
name = "squid-game-doll"
version = "0.1.0"
description = "A game using AI for player tracking inspired by Squid Game TV series, featuring an animated doll with laser."
authors = [ { name = "Pascal Brunot", email="pascal.brunot@fablabbergamo.it"}]
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "Camera==1.3.0",
    "cv2_enumerate_cameras==1.1.18.2",
    "imutils==0.5.4",
    "lmfit==1.3.2",
    "matplotlib",
    "mediapipe",
    "numpy",
    "opencv-contrib-python==4.11.0.86",
    "opencv-python==4.11.0.86",
    "pandas==2.2.3",
    "perlin-numpy==0.0.1",
    "Pillow==11.1.0",
    "pygame==2.6.1",
    "scikit-learn==1.6.1",
    "scipy",
    "simple-pid==2.0.1",
    "scikit-image",
    "torch",
    "ultralytics==8.3.59",
    "supervision",
    "lap>=0.5.12",
    "loguru==0.7.2"
]
include = ["LICENSE", "src/squid_game_doll", "INSTALL.md", "run.sh", "install.bat", "requirements.txt", "src/squid_game_doll/README.md", "src/squid_game_doll/media"]
readme = { file = "README.md", content-type = "text/markdown" }
keywords = [
    "squid game",
    "doll",
    "laser",
    "camera",
    "tracking",
    "control",
    "robotics",
    "computer vision"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
flake8 = "^7.2.0"
snakeviz = "^2.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"